--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -8,7 +8,7 @@
         One Stop Shop For All Your Moving And Removal Needs. Moving / Fitting / Cleaning Services including Piano Removals, Home Office Setups, Apartment Removals, Garden Disposals, Breakdown Services & Full Home Wiring
       </p>
       <div class="btns">
-        <a class="primary button-6" href="/contact" target="_blank" rel="noopener">
+        <a class="primary button-6" href="/contact">
           CONTACT US
         </a>
         <a class="secondary button-6-white" style="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/irelandwebdesigns/15min'});return false;"><!-- Calendly link widget begin -->
