--- a/src/app/services/services.component.less
+++ b/src/app/services/services.component.less
@@ -18,9 +18,14 @@
 
       .text{
         text-align: left;
-        font-size: .8em;
+        color: black !important;
         li{
           list-style-type: none;
+          color: black !important;
+          font-size: .8em;
+        }
+        span{
+          
         }
       }
     }
