--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -169,16 +169,17 @@
            <h2>Home and Garden Waste Disposal</h2>
          </div>
          <div class="text">
-            <span>Waste disposal is an important part of maintaining your home and garden.<br>
+            <span>Waste disposal is an important part of maintaining your home and garden.<br><br>
 
-              Our services include:<br></span>
-            <span>  <li style="font-size: .8em; margin-top: .7em;"> - Removal of all kinds of trash from homes and businesses, including construction debris, furniture, appliances, and other items that can be disposed of properly</li>
+            </span>
+            <span>Our services include:<br></span>
+            <span>  <li style="margin-top: .7em;"> 1.    Removal of all kinds of trash from homes and businesses, including construction debris, furniture, appliances, and other items that can be disposed of properly</li>
 
-              <li style=" font-size: .8em ;margin-top: .7em">
-             - Waste recycling and composting services</li>
+              <li style="margin-top: .7em">
+                2.   Waste recycling and composting services</li>
   
-              <li style="font-size: .8em;margin-top: .7em">
-             - Waste disposals including plastic bags, glass bottles and containers, metal cans and boxes (as well as other items such as batteries)</li></span>
+              <li style="margin-top: .7em">
+                3.  Waste disposals including plastic bags, glass bottles and containers, metal cans and boxes (as well as other items such as batteries)</li></span>
 
          </div>
       </div>
