--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -61,6 +61,18 @@
             width="20"
             height="20"
           />
+          <span>Man with a Van Service</span>
+        </li>
+        <li>
+          <img
+            aria-hidden="true"
+            loading="lazy"
+            decoding="async"
+            src="/assets/images/check.svg"
+            alt="check mark"
+            width="20"
+            height="20"
+          />
           <span>Home and Garden Waste Disposal</span>
         </li>
         <li>
