--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -28,7 +28,7 @@
       We respond to every call and email.
     </p>
     <form
-        action="https://formspree.io/f/mrgdywyg"
+        action="https://formspree.io/f/xdojqvqo"
         method="POST"
         id="contact">
       <div class="input-group">
@@ -129,7 +129,7 @@
     </div>
     <div class="info-group">
       <span class="heading">Hours</span>
-      <span class="info last">Mon to Fri: 8am to 6pm</span>
+      <span class="info last">Mon to Fri: 8am to 9pm</span>
     </div>
   </div>
 </section>
