--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
     />
     <span class="call-us">
       <span class="call-us-text" >OPENING HOURS</span>
-      MON - FRI: 8AM - 6PM
+      MON - FRI: 8AM - 9PM
     </span>
   </span>
 
@@ -73,6 +73,13 @@
       </li>
       <li>
         <span
+          ><a href="/pricing"
+            >PRICING</a
+          ></span
+        >
+      </li>
+      <li>
+        <span
           ><a href="/contact"
             >CONTACT</a
           ></span
@@ -87,10 +94,10 @@
       </li>
       <li>
         <span
-          >        <a class="button-6" style="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/irelandwebdesigns/15min'});return false;"><!-- Calendly link widget begin -->
+          >        <a class="button-6" style="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/quickfixremovals/book'});return false;"><!-- Calendly link widget begin -->
             <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-            <a href="" style="color:white;text-decoration:none;" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/irelandwebdesigns/15min'});return false;">BOOK</a>
+            <a href="" style="color:white;text-decoration:none;" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/quickfixremovals/book'});return false;">BOOK</a>
             <!-- Calendly link widget end --></a></span
         >
       </li>
@@ -110,12 +117,13 @@
   <ul class="navListPhone">
     <li><a href="/home">HOME</a></li>
     <li><a href="/services">SERVICES</a></li>
+    <li><a href="/pricing">PRICING</a></li>
     <li><a href="/contact">CONTACT</a></li>
     <li><a href="/payments">PAY</a></li>
-    <li><a   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/irelandwebdesigns/15min'});return false;"><!-- Calendly link widget begin -->
+    <li><a   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/quickfixremovals/book'});return false;"><!-- Calendly link widget begin -->
       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
       <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-      <a href="" style=" color:white;text-decoration:none;" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/irelandwebdesigns/15min'});return false;">BOOKING</a>
+      <a href="" style=" color:white;text-decoration:none;" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/quickfixremovals/book'});return false;">BOOKING</a>
       <!-- Calendly link widget end --></a></li>
   </ul>
 </div>
