--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,7 +2,7 @@
   <div class="hero-content">
     <div class="heroText">
       <h1 id="home-h" class="home-h">
-        Rubbish Removal Service Dublin
+        Man With A Van Service Service Dublin
       </h1>
       <p>
         One Stop Shop For All Your Moving And Removal Needs. Moving / Fitting / Cleaning Services including Piano Removals, Home Office Setups, Apartment Removals, Garden Disposals, Breakdown Services & Full Home Wiring
@@ -11,7 +11,7 @@
         <a class="primary button-6" href="/contact">
           CONTACT US
         </a>
-        <a class="secondary button-6-white" style="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/irelandwebdesigns/15min'});return false;"><!-- Calendly link widget begin -->
+        <a class="secondary button-6-white" style="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/quickfixremovals/book'});return false;"><!-- Calendly link widget begin -->
           <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
           <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
           <a href="" style=" color:black;text-decoration:none;" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/irelandwebdesigns/15min'});return false;">BOOKING</a>
