--- a/src/app/payments/payments.component.html
+++ b/src/app/payments/payments.component.html
@@ -17,68 +17,6 @@
     </picture>
   </section>
   <div class="services">
-
-    <div class="container-block">
-      <div class="service-block-r">
-        <div class="service-image">
-          <picture>
-            <source
-              media="(max-width: 600px)"
-              srcset="/assets/images/moving-service.webp"
-              width = "300px"
-            />
-            <source media="(max-width: 1280px)" srcset="/assets/images/moving-service.webp"/>
-      
-            <source media="(min-width: 1281px)" srcset="/assets/images/moving-service.webp"/>
-            <img
-              aria-hidden="true"
-              decoding="async"
-              src="/assets/images/moving-service.webp"
-              alt="meeting"
-            />
-            </picture>
-        </div>
-        <div class="service-text">
-           <div class="title">
-             <h2>Moving Services</h2>
-           </div>
-           <div class="text">
-            Enter the number of hours to pay in the quantity
-            <a class="button-6">Pay Here</a>
-           </div>
-        </div>
-      </div>
-    </div>
-   
-    <div class="service-block">
-      <div class="service-image">
-        <picture>
-          <source
-            media="(max-width: 600px)"
-            srcset="/assets/images/home-office.webp"
-            width = "300px"
-          />
-          <source media="(max-width: 1280px)" srcset="/assets/images/home-office.webp"/>
-    
-          <source media="(min-width: 1281px)" srcset="/assets/images/home-office.webp"/>
-          <img
-            aria-hidden="true"
-            decoding="async"
-            src="/assets/images/home-office.webp"
-            alt="meeting"
-          />
-          </picture>
-      </div>
-      <div class="service-text">
-         <div class="title">
-           <h2>Home Office Setup & Wiring Services</h2>
-         </div>
-         <div class="text">
-          Enter the number of hours to pay in the quantity
-          <a class="button-6">Pay Here</a>
-         </div>
-      </div>
-    </div>
     <div class="container-block">
 
       <div class="service-block-r">
@@ -102,109 +40,14 @@
             </picture>
         </div>
         <div class="service-text">
-           <div class="title">
-             <h2>Home and Garden Waste Disposal</h2>
-           </div>
-           <div class="text">
-            Enter the number of hours to pay in the quantity
-            <a class="button-6">Pay Here</a>
-           </div>
-        </div>
+          <div class="title">
+            <h2>QuickFixRemovals Checkout</h2>
+          </div>
+          <div class="text">
+            Pay for your QuickFixRemovals service online!
+           <a class="button-6" href="https://buy.stripe.com/cN24hM70B9lN0BG3ci" target="_blank">Pay Here</a>
+          </div>
+       </div>
       </div>
     </div>
-    <div class="service-block">
-      <div class="service-image">
-        <picture>
-          <source
-            media="(max-width: 600px)"
-            srcset="/assets/images/breakdown-service.webp"
-            width = "300px"
-            
-          />
-          <source media="(max-width: 1280px)" srcset="/assets/images/breakdown-service.webp" />
-    
-          <source media="(min-width: 1281px)" srcset="/assets/images/breakdown-service.webp"/>
-          <img
-            aria-hidden="true"
-            decoding="async"
-            src="/assets/images/breakdown-service.webp"
-            alt="meeting"
-          />
-          </picture>
-      </div>
-      <div class="service-text">
-         <div class="title">
-           <h2>Motorbike & Car Breakdown Removals</h2>
-         </div>
-         <div class="text">
-          Enter the number of hours to pay in the quantity
-          <a class="button-6">Pay Here</a>
-         </div>
-      </div>
-    </div>
-    <div class="container-block">
-      <div class="service-block-r">
-        <div class="service-image">
-          <picture>
-            <source
-              media="(max-width: 600px)"
-              srcset="/assets/images/kitchen-fitting.webp"
-              width="300px"
-              
-            />
-            <source media="(max-width: 1280px)" srcset="/assets/images/kitchen-fitting.webp"/>
-      
-            <source media="(min-width: 1281px)" srcset="/assets/images/kitchen-fitting.webp"/>
-            <img
-              aria-hidden="true"
-              decoding="async"
-              src="/assets/images/kitchen-fitting.webp"
-              alt="meeting"
-            />
-            </picture>
-        </div>
-        <div class="service-text">
-           <div class="title">
-             <h2>Kitchen Fitting</h2>
-           </div>
-           <div class="text">
-            Enter the number of hours to pay in the quantity
-            <a class="button-6">Pay Here</a>
-           </div>
-        </div>
-        
-      </div>
-
-    </div>
-    <div class="service-block">
-      <div class="service-image">
-        <picture>
-          <source
-            media="(max-width: 600px)"
-            srcset="/assets/images/deep-clean.webp"
-            width="300px"
-            
-          />
-          <source media="(max-width: 1280px)" srcset="/assets/images/deep-clean.webp"/>
-    
-          <source media="(min-width: 1281px)" srcset="/assets/images/deep-clean.webp"/>
-          <img
-            aria-hidden="true"
-            decoding="async"
-            src="/assets/images/deep-clean.webp"
-            alt="meeting"
-          />
-          </picture>
-      </div>
-      <div class="service-text">
-         <div class="title">
-           <h2>Deep Cleaning / Home Cleaning</h2>
-         </div>
-         <div class="text">
-          Enter the number of hours to pay in the quantity
-          <a class="button-6">Pay Here</a>
-         </div>
-      </div>
-    </div>
-  
   </div>
