--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,6 +15,7 @@
             <li><h2>Information</h2></li>
             <li><a href="/home">Home</a></li>
             <li><a href="/services">Services</a></li>
+            <li><a href="/pricing">Pricing</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
           <ul>
@@ -32,7 +33,7 @@
           <ul>
             <li><h2>Contact</h2></li>
             <li>
-              <a href="/contact.html">Dublin<br />Ireland</a>
+              <a href="/contact">Dublin,<br />Ireland</a>
             </li>
             <li><a href="tel:0852330305">T: 085 2330305</a></li>
             <li><a href="mailto:quickfixremovals@gmail.com"> quickfixremovals@gmail.com - Click to Email</a></li>
