--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,9 +5,9 @@
         Trusted Removals for Dublin
       </h2>
       <p>
-        Quick Fix Removals provide rubbish removal and moving services across Dublin. Our commited team
-        provide quick and efficient house clearance and waste disposal. Whether it is a simple piano removal or a breakdown, Our team will
-        always go above and beyond to ensure customer satisfaction and a job well done.
+        Quick Fix Removals provide rubbish removal and safe and secure transportation across Dublin. Our commited team of insured and licensed experienced movers
+        provide an efficient and reliable service at affordable rates with customer satisfaction guaranteed. Our Professional drivers offer same day delivery and flexible scheduling. Whether it is a simple piano removal or a breakdown, Our team will
+        always go above and beyond to ensure customer satisfaction and a job well done. We offer moving services from single item delivery to full home relocation
       </p>
       <p>
         <strong>Our Services:</strong>
@@ -23,8 +23,8 @@
             width="20"
             height="20"
           />
-          <span
-            >Home Office Setup</span
+          <a href="/services#office"
+            >Home Office Setup / Office Removals</a
           >
         </li>
         <li>
@@ -37,7 +37,7 @@
             width="20"
             height="20"
           />
-          <span>Apartment Removals</span>
+          <a href="/services">Apartment Removals</a>
         </li>
         <li>
           <img
@@ -49,7 +49,7 @@
             width="20"
             height="20"
           />
-          <span>Moving Services</span>
+          <a href="/services">Moving Services</a>
         </li>
         <li>
           <img
@@ -61,7 +61,7 @@
             width="20"
             height="20"
           />
-          <span>Man with a Van Service</span>
+          <a href="/services">Man with a Van Service</a>
         </li>
         <li>
           <img
@@ -73,7 +73,7 @@
             width="20"
             height="20"
           />
-          <span>Home and Garden Waste Disposal</span>
+          <a href="/services">Local and long distance moves</a>
         </li>
         <li>
           <img
@@ -85,7 +85,7 @@
             width="20"
             height="20"
           />
-          <span>Motorbike & Car Breakdown Removals</span>
+          <a href="/services#car">Motorbike & Car Breakdown Removals</a>
         </li>
         <li>
           <img
@@ -97,7 +97,7 @@
             width="20"
             height="20"
           />
-          <span>Kitchen Fitting</span>
+          <a href="/services">Loading and Unloading Assistance</a>
         </li>
         <li>
           <img
@@ -109,7 +109,7 @@
             width="20"
             height="20"
           />
-          <span>Full Home and Office Wiring</span>
+          <a href="/services">Packing services</a>
         </li>
         <li>
           <img
@@ -121,7 +121,43 @@
             width="20"
             height="20"
           />
-          <span>Deep Cleaning / Home Cleaning</span>
+          <a href="/services#clean">Deep Cleaning / Home Cleaning</a>
+        </li>
+        <li>
+          <img
+            aria-hidden="true"
+            loading="lazy"
+            decoding="async"
+            src="/assets/images/check.svg"
+            alt="check mark"
+            width="20"
+            height="20"
+          />
+          <a href="/services">Packing services</a>
+        </li>
+        <li>
+          <img
+            aria-hidden="true"
+            loading="lazy"
+            decoding="async"
+            src="/assets/images/check.svg"
+            alt="check mark"
+            width="20"
+            height="20"
+          />
+          <a href="/services">Large item transportation</a>
+        </li>
+        <li>
+          <img
+            aria-hidden="true"
+            loading="lazy"
+            decoding="async"
+            src="/assets/images/check.svg"
+            alt="check mark"
+            width="20"
+            height="20"
+          />
+          <a href="/services">Student Removals</a>
         </li>
       </ul>
       <p>
