--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,7 +21,7 @@
           <ul>
             <li><h2>Services</h2></li>
             <li><a href="/services">Home Removals</a></li>
-            <li><a href="/services">Furniture Removals</a></li>
+            <li><a href="/services">Furniture Removal</a></li>
             <li><a href="/services">Waste Disposal</a></li>
             <li><a href="/services">Breakdown Services</a></li>
             <li><a href="/services">Home Offices</a></li>
