--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,10 +2,10 @@
   <div class="hero-content">
     <div class="heroText">
       <h1 id="home-h" class="home-h">
-        Man With A Van Service Service Dublin
+        Man With A Van Service Dublin.
       </h1>
       <p>
-        One Stop Shop For All Your Moving And Removal Needs. Moving / Fitting / Cleaning Services including Piano Removals, Home Office Setups, Apartment Removals, Garden Disposals, Breakdown Services & Full Home Wiring
+         Moving And Removal Service. We do Dublin. Moving / Fitting / Cleaning Services including Piano Removals, Home Office Setups, Apartment Removals, Garden Disposals, Breakdown Services & Full Home Wiring
       </p>
       <div class="btns">
         <a class="primary button-6" href="/contact">
