--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -97,7 +97,7 @@
     </div>
   </div>
  
-  <div class="service-block">
+  <div class="service-block" id = "office">
     <div class="service-image">
       <picture>
         <source
@@ -118,7 +118,7 @@
     </div>
     <div class="service-text">
        <div class="title">
-         <h2>Home Office Setup & Wiring Services</h2>
+         <h2>Home Office Setup / Office Removals</h2>
        </div>
        <div class="text">
         Home office setup and wiring can be confusing, but it doesn't have to be. We've got you covered.
@@ -144,8 +144,8 @@
         />
       </picture>
     </div>
-    <div class="service-block-r">
-      <div class="service-image">
+    <div class="service-block-r" >
+      <div class="service-image" id = "waste">
         <picture>
           <source
             media="(max-width: 600px)"
@@ -202,7 +202,7 @@
       </picture>
     </div>
   </div>
-  <div class="service-block">
+  <div class="service-block" id="car">
     <div class="service-image">
       <picture>
         <source
@@ -317,7 +317,7 @@
         />
         </picture>
     </div>
-    <div class="service-text">
+    <div class="service-text" id="clean">
        <div class="title">
          <h2>Deep Cleaning / Home Cleaning</h2>
        </div>
