--- a/src/app/about/about.component.less
+++ b/src/app/about/about.component.less
@@ -42,9 +42,13 @@
             margin-right: 1.5em;
             margin-top: 1.5em;
           }
-          span{
+          span,a{
             margin-top: 1.5em;
 
+          }
+          a{
+            text-decoration: none;
+            
           }
         }
       }
