updates to add locations

--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -312,7 +312,7 @@
     overflow-y: hidden;
   }
   .navList {
-    font-size: 1.3rem;
+    font-size: .9rem;
   }
   .noColor {
     background-color: transparent;
