--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -32,6 +32,7 @@
 </section>
 <app-process></app-process>
 <app-about></app-about>
+<app-locations></app-locations>
 <app-reviews></app-reviews>
 <app-lead-form></app-lead-form>
 <section id = "video-section">
@@ -46,4 +47,5 @@
   </div>
   <iframe src="https://www.youtube.com/embed/FoWTsrrDEdg" title="house movers ireland" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
+
 
