--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -25,8 +25,6 @@
             <li><a href="/services">Waste Disposal</a></li>
             <li><a href="/services">Breakdown Services</a></li>
             <li><a href="/services">Home Offices</a></li>
-            <li><a href="/services">Wiring</a></li>
-            <li><a href="/services">Deep Cleaning</a></li>
 
 
           </ul>
@@ -37,6 +35,13 @@
             </li>
             <li><a href="tel:0852330305">T: 085 2330305</a></li>
             <li><a href="mailto:quickfixremovals@gmail.com"> quickfixremovals@gmail.com - Click to Email</a></li>
+          </ul>
+          <ul>
+            <li><h2>Locations</h2></li>
+            <li><a>Dublin</a></li>
+            <li><a>Meath</a></li>
+            <li><a>West Meath</a></li>
+            <li><a>Contact</a></li>
           </ul>
         </div>
       </div>
